# dense_flow

./: README.md
deploy/: activity_net.v1-3.min.json  check_flows_activitynet.py  extract_comp_flow_videos_activitynet.py  extract_compensated_flow_videos.py  extract_flow_videos.py  extract_flow_videos_activitynet.py  extract_flows_activitynet_submission_script.sh  runme_compensated_flow_hmdb51.sh  runme_compensated_flow_kinetics.sh  runme_compensated_flow_olympic_sports.sh  runme_compensated_flow_ucf101.sh  runme_dense_compensated_flow_activitynet.sh  runme_dense_flow_activitynet.sh  runme_dense_flow_kinetics.sh  script_extract_compensated_flows_activitynet.sh  script_extract_compensated_flows_kinetics.sh  script_extract_compensated_flows_olympic_sports.sh  script_extract_dense_flows_kinetics.sh
matlab/: cpu_extractingFlowUCF101.m  extractingDenseColorFlow_UCF101.m  extractingFlow_HMDB.m  runme.sh  runme_dense_color_flow.sh
python/: extract_comp_flow_from_folder_of_videos.py  extract_comp_flow_videos_activitynet.py  extract_compensated_flow_videos.py  extract_flow_from_folder_of_videos.py  extract_flow_videos.py  extract_flow_videos_activitynet.py  runme_compensated_flow_hmdb51.sh  runme_compensated_flow_hollywood2.sh  runme_compensated_flow_ucf101.sh  runme_dense_flow_activitynet.sh  runme_dense_flow_hmdb51.sh  runme_dense_flow_sports1m.sh  runme_dense_flow_ucf101.sh
src/: CMakeLists.txt  CTensorOpencv.h  color_flow.cpp  color_flow.hpp  denseFlow.cpp  denseFlow_gpu.cpp  denseFlow_gpu_with_segment.cpp  denseFlow_ldof_gpu.cpp  dense_color_flow.cpp  extract_flow_videos.py  extractingDenseColorFlow_HMDB.m  extractingFlow_UCF101.m  gpu_compensated_optical_flow.cpp  gpu_compensated_optical_flow_with_segment.cpp  helper_function.cpp  helper_function.h  ldof.h  runme_cpu_dense_flow.sh
tests/: test_script.sh
